--- a/packages/data-source/package.json
+++ b/packages/data-source/package.json
@@ -20,10 +20,7 @@
   ],
   "license": "Apache-2.0",
   "scripts": {
-    "build": "npm run build:type && vite build --mode=es && vite build --mode=umd",
-    "build:type": "npm run clear:type && tsc --declaration --emitDeclarationOnly --project tsconfig.build.json && tsc-alias -p tsconfig.build.json",
-    "check:type": "tsc --noEmit --project tsconfig.build.json",
-    "clear:type": "rimraf ./types"
+    "build": "vite build --mode=es && vite build --mode=umd"
   },
   "engines": {
     "node": ">=18"
@@ -41,14 +38,8 @@
     "events": "^3.3.0",
     "lodash-es": "^4.17.21"
   },
-  "devDependencies": {
-    "@types/events": "^3.0.0",
-    "@types/lodash-es": "^4.17.4",
-    "@types/node": "^18.19.0",
-    "tsc-alias": "^1.8.5",
-    "vite": "^5.3.5"
-  },
   "peerDependencies": {
+    "@tmagic/core": "workspace:*",
     "@tmagic/schema": "workspace:*",
     "@tmagic/utils": "workspace:*",
     "typescript": "*"
@@ -57,5 +48,12 @@
     "typescript": {
       "optional": true
     }
+  },
+  "devDependencies": {
+    "@types/events": "^3.0.0",
+    "@types/lodash-es": "^4.17.4",
+    "@types/node": "^18.19.0",
+    "tsc-alias": "^1.8.5",
+    "vite": "^5.3.5"
   }
 }
