--- a/runtime/vue-runtime-help/tsconfig.build.json
+++ b/runtime/vue-runtime-help/tsconfig.build.json
@@ -4,7 +4,8 @@
     "rootDir": "./src",
     "outDir": "./dist",
     "declaration": true,
-    "sourceMap": false
+    "sourceMap": false,
+    "types": ["node"],
   },
   "include": ["./src"],
 }
