--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -15,6 +15,9 @@
   "engines": {
     "node": ">=18"
   },
+  "scripts": {
+    "build": "vite build"
+  },
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
