--- a/vue-components/page/package.json
+++ b/vue-components/page/package.json
@@ -17,6 +17,7 @@
     "vue-demi": "^0.14.10"
   },
   "peerDependencies": {
+    "@tmagic/utils": "workspace:*",
     "@tmagic/schema": "workspace:*",
     "@tmagic/vue-container": "workspace:*",
     "@tmagic/vue-runtime-help": "workspace:*",
