--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,7 +2,7 @@
   "version": "1.4.18",
   "name": "@tmagic/ui",
   "type": "module",
-  "main": "src/index.ts",
+  "main": "dist/tmagic-ui.js",
   "types": "types/index.d.ts",
   "exports": {
     "./*": "./*"
