--- a/packages/design/package.json
+++ b/packages/design/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.4.17",
+  "version": "1.5.0-beta.0",
   "name": "@tmagic/design",
   "type": "module",
   "main": "dist/tmagic-design.umd.cjs",
