--- a/packages/table/package.json
+++ b/packages/table/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.4.17",
+  "version": "1.5.0-beta.0",
   "name": "@tmagic/table",
   "type": "module",
   "main": "dist/tmagic-table.umd.cjs",
