--- a/packages/ui-react/package.json
+++ b/packages/ui-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tmagic/ui-react",
-  "version": "1.4.17",
+  "version": "1.5.0-beta.0",
   "type": "module",
   "main": "dist/tmagic-ui-react.js",
   "types": "types/index.d.ts",
