chore: release v1.5.0-beta.0

--- a/playground/package.json
+++ b/playground/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tmagic-playground",
-  "version": "1.4.19",
+  "version": "1.5.0-beta.0",
   "type": "module",
   "private": true,
   "scripts": {
@@ -13,16 +13,16 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
-    "@tmagic/core": "1.4.19",
-    "@tmagic/design": "1.4.19",
-    "@tmagic/editor": "1.4.19",
-    "@tmagic/element-plus-adapter": "1.4.19",
-    "@tmagic/form": "1.4.19",
+    "@tmagic/core": "1.5.0-beta.0",
+    "@tmagic/design": "1.5.0-beta.0",
+    "@tmagic/editor": "1.5.0-beta.0",
+    "@tmagic/element-plus-adapter": "1.5.0-beta.0",
+    "@tmagic/form": "1.5.0-beta.0",
     "@tmagic/tmagic-form-runtime": "1.0.11",
-    "@tmagic/schema": "1.4.19",
-    "@tmagic/stage": "1.4.19",
-    "@tmagic/utils": "1.4.19",
-    "element-plus": "^2.7.8",
+    "@tmagic/schema": "1.5.0-beta.0",
+    "@tmagic/stage": "1.5.0-beta.0",
+    "@tmagic/utils": "1.5.0-beta.0",
+    "element-plus": "^2.8.0",
     "lodash-es": "^4.17.21",
     "monaco-editor": "^0.48.0",
     "serialize-javascript": "^6.0.0",
