--- a/packages/dep/package.json
+++ b/packages/dep/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.4.19",
+  "version": "1.5.0-beta.0",
   "name": "@tmagic/dep",
   "type": "module",
   "main": "dist/tmagic-dep.umd.cjs",
