--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.4.18",
+  "version": "1.5.0-beta.0",
   "name": "@tmagic/ui",
   "type": "module",
   "main": "dist/tmagic-ui.js",
