--- a/packages/element-plus-adapter/package.json
+++ b/packages/element-plus-adapter/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.4.16",
+  "version": "1.5.0-beta.0",
   "name": "@tmagic/element-plus-adapter",
   "type": "module",
   "main": "dist/tmagic-element-plus-adapter.umd.cjs",
