--- a/packages/stage/package.json
+++ b/packages/stage/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.4.16",
+  "version": "1.5.0-beta.0",
   "name": "@tmagic/stage",
   "type": "module",
   "main": "dist/tmagic-stage.umd.cjs",
