--- a/runtime/react/package.json
+++ b/runtime/react/package.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "@tmagic/core": "1.5.0-beta.1",
     "@tmagic/data-source": "1.5.0-beta.1",
-    "@tmagic/react-runtime-help": "workspace:*",
+    "@tmagic/react-runtime-help": "0.0.2",
     "@tmagic/schema": "1.5.0-beta.1",
     "@tmagic/stage": "1.5.0-beta.1",
     "@tmagic/utils": "1.5.0-beta.1",
