--- a/runtime/react-runtime-help/package.json
+++ b/runtime/react-runtime-help/package.json
@@ -33,11 +33,11 @@
   },
   "peerDependencies": {
     "lodash-es": "^4.17.21",
-    "@tmagic/core": "workspace:*",
-    "@tmagic/data-source": "workspace:*",
-    "@tmagic/schema": "workspace:*",
-    "@tmagic/stage": "workspace:*",
-    "@tmagic/utils": "workspace:*",
+    "@tmagic/core": "workspace:^",
+    "@tmagic/data-source": "workspace:^",
+    "@tmagic/schema": "workspace:^",
+    "@tmagic/stage": "workspace:^",
+    "@tmagic/utils": "workspace:^",
     "react": ">=18.3.1",
     "typescript": "*"
   },
