--- a/react-components/qrcode/package.json
+++ b/react-components/qrcode/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.1",
+  "version": "0.0.2",
   "name": "@tmagic/react-qrcode",
   "type": "module",
   "main": "src/index.ts",
@@ -17,8 +17,8 @@
     "qrcode": "^1.5.0"
   },
   "peerDependencies": {
-    "@tmagic/schema": "workspace:*",
-    "@tmagic/react-runtime-help": "workspace:*",
+    "@tmagic/schema": "workspace:^",
+    "@tmagic/react-runtime-help": "workspace:^",
     "react": ">=18.3.1",
     "react-dom": ">=18.3.1",
     "typescript": "*"
