--- a/react-components/page-fragment/package.json
+++ b/react-components/page-fragment/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.1",
+  "version": "0.0.2",
   "name": "@tmagic/react-page-fragment",
   "type": "module",
   "main": "src/index.ts",
@@ -14,9 +14,9 @@
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
   "peerDependencies": {
-    "@tmagic/utils": "workspace:*",
-    "@tmagic/schema": "workspace:*",
-    "@tmagic/react-runtime-help": "workspace:*",
+    "@tmagic/utils": "workspace:^",
+    "@tmagic/schema": "workspace:^",
+    "@tmagic/react-runtime-help": "workspace:^",
     "react": ">=18.3.1",
     "react-dom": ">=18.3.1",
     "typescript": "*"
