--- a/vue-components/container/package.json
+++ b/vue-components/container/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.2",
+  "version": "0.0.3",
   "name": "@tmagic/vue-container",
   "type": "module",
   "main": "src/index.ts",
@@ -17,9 +17,9 @@
     "vue-demi": "^0.14.10"
   },
   "peerDependencies": {
-    "@tmagic/schema": "workspace:*",
-    "@tmagic/utils": "workspace:*",
-    "@tmagic/vue-runtime-help": "workspace:*",
+    "@tmagic/schema": "workspace:^",
+    "@tmagic/utils": "workspace:^",
+    "@tmagic/vue-runtime-help": "workspace:^",
     "@vue/composition-api": ">=1.7.2",
     "typescript": "*",
     "vue": ">=2.0.0 || >=3.0.0"
