chore(core): npm包中增加resetcss.css

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -20,7 +20,8 @@
   "files": [
     "dist",
     "types",
-    "src"
+    "src",
+    "resetcss.css"
   ],
   "license": "Apache-2.0",
   "scripts": {
