--- a/packages/design/package.json
+++ b/packages/design/package.json
@@ -2,6 +2,10 @@
   "version": "1.5.0-beta.8",
   "name": "@tmagic/design",
   "type": "module",
+  "sideEffects": [
+    "dist/style.css",
+    "src/theme/*"
+  ],
   "main": "dist/tmagic-design.umd.cjs",
   "module": "dist/tmagic-design.js",
   "types": "types/index.d.ts",
