chore: 将dist/style.css加入到sideEffects中

--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -3,6 +3,7 @@
   "name": "@tmagic/editor",
   "type": "module",
   "sideEffects": [
+    "dist/style.css",
     "src/theme/*"
   ],
   "main": "dist/tmagic-editor.umd.cjs",
