--- a/packages/table/package.json
+++ b/packages/table/package.json
@@ -2,6 +2,10 @@
   "version": "1.5.0-beta.8",
   "name": "@tmagic/table",
   "type": "module",
+  "sideEffects": [
+    "dist/style.css",
+    "src/theme/*"
+  ],
   "main": "dist/tmagic-table.umd.cjs",
   "module": "dist/tmagic-table.js",
   "types": "types/index.d.ts",
