--- a/package.json
+++ b/package.json
@@ -43,48 +43,47 @@
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.2.0",
-    "@commitlint/config-conventional": "^18.1.0",
-    "@rollup/plugin-alias": "^5.1.0",
-    "@types/node": "^18.19.0",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
-    "@vitejs/plugin-vue": "^5.1.3",
-    "@vitest/coverage-v8": "^2.0.5",
-    "c8": "^7.11.3",
-    "commitizen": "^4.3.0",
+    "@commitlint/cli": "^18.6.1",
+    "@commitlint/config-conventional": "^18.6.3",
+    "@rollup/plugin-alias": "^5.1.1",
+    "@types/node": "18.19.61",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "@vitejs/plugin-vue": "^5.1.4",
+    "@vitest/coverage-v8": "^2.1.4",
+    "c8": "^7.14.0",
+    "commitizen": "^4.3.1",
     "conventional-changelog-cli": "^4.1.0",
     "cosmiconfig": "^8.3.6",
     "cz-conventional-changelog": "^3.3.0",
-    "element-plus": "^2.8.0",
-    "enquirer": "^2.3.6",
-    "eslint": "^8.38.0",
-    "eslint-config-tencent": "^1.0.4",
-    "eslint-plugin-import": "^2.27.5",
+    "element-plus": "^2.8.6",
+    "enquirer": "^2.4.1",
+    "eslint": "^8.57.1",
+    "eslint-config-tencent": "^1.1.1",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-vue": "^9.10.0",
-    "execa": "^4.0.2",
-    "highlight.js": "^11.7.0",
-    "husky": "^7.0.0",
+    "eslint-plugin-vue": "^9.30.0",
+    "execa": "^4.1.0",
+    "husky": "^7.0.4",
     "jsdom": "^19.0.0",
-    "lint-staged": "^11.0.1",
-    "minimist": "^1.2.6",
-    "picocolors": "^1.0.0",
-    "prettier": "^2.8.7",
-    "recast": "^0.20.4",
+    "lint-staged": "^11.2.6",
+    "minimist": "^1.2.8",
+    "picocolors": "^1.1.1",
+    "prettier": "^2.8.8",
+    "recast": "^0.20.5",
     "rimraf": "^3.0.2",
-    "rollup": "^4.17.2",
+    "rollup": "^4.24.3",
     "rollup-plugin-dts": "^6.1.1",
-    "semver": "^7.3.7",
-    "serialize-javascript": "^6.0.0",
+    "semver": "^7.6.3",
+    "serialize-javascript": "^6.0.2",
     "shx": "^0.3.4",
-    "typescript": "^5.5.4",
-    "vite": "^5.4.3",
-    "vitepress": "^1.3.4",
-    "vitest": "^2.0.5",
-    "vue": "^3.5.0",
-    "vue-tsc": "^2.1.6"
+    "typescript": "^5.6.3",
+    "vite": "^5.4.10",
+    "vitepress": "^1.4.2",
+    "vitest": "^2.1.4",
+    "vue": "^3.5.12",
+    "vue-tsc": "^2.1.10"
   },
   "config": {
     "commitizen": {
