--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "module": "ESNext",
     "strict": true,
     "jsx": "preserve",
-    "moduleResolution": "Node",
+    "moduleResolution": "bundler",
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
@@ -19,13 +19,13 @@
     "lib": ["ESNext", "DOM"],
     "paths": {
       // 内部模块都指向 src/index.ts, 会有更好的代码跳转体验.
-      "@tmagic/*": ["packages/*/src"],
-      "@tmagic/tmagic-form-runtime": ["runtime/tmagic-form/src"],
-      "@tmagic/vue-runtime-help": ["runtime/vue-runtime-help/src"],
-      "@tmagic/react-runtime-help": ["runtime/react-runtime-help/src"],
-      "@editor/*": ["packages/editor/src/*"],
-      "@form/*": ["packages/form/src/*"],
-      "@data-source/*": ["packages/data-source/src/*"],
+      "@tmagic/*": ["./packages/*/src"],
+      "@tmagic/tmagic-form-runtime": ["./runtime/tmagic-form/src"],
+      "@tmagic/vue-runtime-help": ["./runtime/vue-runtime-help/src"],
+      "@tmagic/react-runtime-help": ["./runtime/react-runtime-help/src"],
+      "@editor/*": ["./packages/editor/src/*"],
+      "@form/*": ["./packages/form/src/*"],
+      "@data-source/*": ["./packages/data-source/src/*"],
     },
     "types": [
       "node",
