--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -31,6 +31,7 @@
     "node": ">=18"
   },
   "repository": {
+    "directory": "packages/core",
     "type": "git",
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
@@ -50,7 +51,7 @@
     "@types/lodash-es": "^4.17.4",
     "@types/node": "^18.19.0",
     "rimraf": "^3.0.2",
-    "vite": "^5.4.3"
+    "vite": "^5.4.10"
   },
   "peerDependencies": {
     "typescript": "*"
