--- a/packages/data-source/package.json
+++ b/packages/data-source/package.json
@@ -26,6 +26,7 @@
     "node": ">=18"
   },
   "repository": {
+    "directory": "packages/data-source",
     "type": "git",
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
@@ -51,6 +52,6 @@
     "@types/lodash-es": "^4.17.4",
     "@types/node": "^18.19.0",
     "tsc-alias": "^1.8.5",
-    "vite": "^5.4.3"
+    "vite": "^5.4.10"
   }
 }
