--- a/packages/dep/package.json
+++ b/packages/dep/package.json
@@ -26,13 +26,14 @@
     "node": ">=18"
   },
   "repository": {
+    "directory": "packages/dep",
     "type": "git",
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
   "devDependencies": {
     "@types/node": "^18.19.0",
     "rimraf": "^3.0.2",
-    "vite": "^5.4.3"
+    "vite": "^5.4.10"
   },
   "peerDependencies": {
     "@tmagic/schema": "workspace:*",
