--- a/packages/design/package.json
+++ b/packages/design/package.json
@@ -30,6 +30,7 @@
     "node": ">=18"
   },
   "repository": {
+    "directory": "packages/design",
     "type": "git",
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
@@ -41,18 +42,17 @@
     "typescript"
   ],
   "dependencies": {
-    "@popperjs/core": "npm:@sxzz/popperjs-es@^2.11.7"
+    "@popperjs/core": "^2.11.8"
   },
   "devDependencies": {
     "@types/node": "^18.19.0",
     "@vitejs/plugin-vue": "^5.1.3",
-    "@vue/compiler-sfc": "^3.5.0",
-    "@vue/test-utils": "^2.4.6",
+    "@vue/compiler-sfc": "^3.5.12",
     "rimraf": "^3.0.2",
-    "vite": "^5.4.3"
+    "vite": "^5.4.10"
   },
   "peerDependencies": {
-    "vue": "^3.5.0",
+    "vue": ">=3.5.0",
     "typescript": "*"
   },
   "peerDependenciesMeta": {
