--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -35,6 +35,7 @@
     "node": ">=18"
   },
   "repository": {
+    "directory": "packages/editor",
     "type": "git",
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
@@ -72,19 +73,19 @@
     "@types/serialize-javascript": "^5.0.1",
     "@types/sortablejs": "^1.15.8",
     "@vitejs/plugin-vue": "^5.1.3",
-    "@vue/compiler-sfc": "^3.5.0",
+    "@vue/compiler-sfc": "^3.5.12",
     "@vue/test-utils": "^2.4.6",
     "rimraf": "^3.0.2",
     "sass": "^1.78.0",
     "tsc-alias": "^1.8.5",
     "type-fest": "^4.10.3",
-    "vite": "^5.4.3"
+    "vite": "^5.4.10"
   },
   "peerDependencies": {
     "@tmagic/core": "workspace:*",
     "monaco-editor": "^0.48.0",
     "typescript": "*",
-    "vue": "^3.5.0"
+    "vue": ">=3.5.0"
   },
   "peerDependenciesMeta": {
     "typescript": {
