--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -35,6 +35,7 @@
     "node": ">=18"
   },
   "repository": {
+    "directory": "packages/form",
     "type": "git",
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
@@ -50,16 +51,16 @@
     "@types/node": "^18.19.0",
     "@types/sortablejs": "^1.15.8",
     "@vitejs/plugin-vue": "^5.1.3",
-    "@vue/compiler-sfc": "^3.5.0",
+    "@vue/compiler-sfc": "^3.5.12",
     "@vue/test-utils": "^2.4.6",
     "rimraf": "^3.0.2",
     "sass": "^1.78.0",
-    "vite": "^5.4.3"
+    "vite": "^5.4.10"
   },
   "peerDependencies": {
     "@tmagic/design": "workspace:*",
     "@tmagic/utils": "workspace:*",
-    "vue": "^3.5.0",
+    "vue": ">=3.5.0",
     "typescript": "*"
   },
   "peerDependenciesMeta": {
