--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -26,13 +26,14 @@
   },
   "license": "Apache-2.0",
   "repository": {
+    "directory": "packages/schema",
     "type": "git",
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
   "devDependencies": {
     "@types/node": "^18.19.0",
     "rimraf": "^3.0.2",
-    "vite": "^5.4.3"
+    "vite": "^5.4.10"
   },
   "peerDependencies": {
     "typescript": "*"
