--- a/packages/tdesign-vue-next-adapter/package.json
+++ b/packages/tdesign-vue-next-adapter/package.json
@@ -26,6 +26,7 @@
     "node": ">=18"
   },
   "repository": {
+    "directory": "packages/tdesign-vue-next-adapter",
     "type": "git",
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
@@ -38,15 +39,15 @@
   ],
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.3",
-    "@vue/compiler-sfc": "^3.5.0",
+    "@vue/compiler-sfc": "^3.5.12",
     "@types/node": "^18.19.0",
     "rimraf": "^3.0.2",
-    "vite": "^5.4.3"
+    "vite": "^5.4.10"
   },
   "peerDependencies": {
     "@tmagic/design": "workspace:*",
     "tdesign-vue-next": "^1.9.8",
-    "vue": "^3.5.0",
+    "vue": ">=3.5.0",
     "typescript": "*"
   },
   "peerDependenciesMeta": {
