--- a/packages/ui-react/package.json
+++ b/packages/ui-react/package.json
@@ -11,6 +11,7 @@
     "node": ">=18"
   },
   "repository": {
+    "directory": "packages/ui-react",
     "type": "git",
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
@@ -39,6 +40,6 @@
   },
   "devDependencies": {
     "rimraf": "^3.0.2",
-    "vite": "^5.4.3"
+    "vite": "^5.4.10"
   }
 }
