--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -20,6 +20,7 @@
   },
   "license": "Apache-2.0",
   "repository": {
+    "directory": "packages/ui",
     "type": "git",
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
@@ -45,6 +46,6 @@
   },
   "devDependencies": {
     "rimraf": "^3.0.2",
-    "vite": "^5.4.3"
+    "vite": "^5.4.10"
   }
 }
