--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -25,6 +25,7 @@
     "node": ">=18"
   },
   "repository": {
+    "directory": "packages/utils",
     "type": "git",
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
@@ -35,7 +36,7 @@
     "@types/lodash-es": "^4.17.4",
     "@types/node": "^18.19.0",
     "rimraf": "^3.0.2",
-    "vite": "^5.4.3"
+    "vite": "^5.4.10"
   },
   "peerDependencies": {
     "@tmagic/schema": "workspace:*",
