--- a/runtime/react-runtime-help/package.json
+++ b/runtime/react-runtime-help/package.json
@@ -33,8 +33,8 @@
   },
   "peerDependencies": {
     "lodash-es": "^4.17.21",
-    "@tmagic/core": "workspace:^",
-    "@tmagic/stage": "workspace:^",
+    "@tmagic/core": ">=1.5.0-beta.14",
+    "@tmagic/stage": ">=1.5.0-beta.14",
     "react": ">=18.3.1",
     "typescript": "*"
   },
