--- a/runtime/vue-runtime-help/package.json
+++ b/runtime/vue-runtime-help/package.json
@@ -32,11 +32,11 @@
     "vue-demi": "^0.14.10"
   },
   "peerDependencies": {
-    "@tmagic/core": "workspace:^",
-    "@tmagic/stage": "workspace:^",
+    "@tmagic/core": ">=1.5.0-beta.14",
+    "@tmagic/stage": ">=1.5.0-beta.14",
     "@vue/composition-api": ">=1.7.2",
     "typescript": "*",
-    "vue": ">=2.0.0 || >=3.0.0"
+    "vue": ">=2.6.0 || >=3.5.0"
   },
   "peerDependenciesMeta": {
     "@vue/composition-api": {
