--- a/runtime/vue3/package.json
+++ b/runtime/vue3/package.json
@@ -23,7 +23,7 @@
     "@tmagic/stage": "1.5.0-beta.14",
     "@tmagic/vue-runtime-help": "^0.1.4",
     "axios": "^0.25.0",
-    "vue": "^3.5.0"
+    "vue": ">=3.5.0"
   },
   "devDependencies": {
     "@tmagic/cli": "1.5.0-beta.14",
@@ -31,13 +31,12 @@
     "@vitejs/plugin-legacy": "^5.4.2",
     "@vitejs/plugin-vue": "^5.1.3",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
-    "@vue/compiler-sfc": "^3.5.0",
-    "@vue/test-utils": "^2.4.6",
+    "@vue/compiler-sfc": "^3.5.12",
     "rollup": "^4.17.2",
     "rollup-plugin-external-globals": "^0.10.0",
     "sass": "^1.78.0",
     "terser": "^5.31.6",
     "typescript": "^5.5.4",
-    "vite": "^5.4.3"
+    "vite": "^5.4.10"
   }
 }
