--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "tmagic",
   "private": true,
   "type": "module",
-  "packageManager": "pnpm@9.9.0",
+  "packageManager": "pnpm@9.12.3",
   "scripts": {
     "bootstrap": "pnpm i && pnpm build",
     "clean:top": "rimraf */**/dist */**/types */dist coverage dwt* temp",
@@ -65,6 +65,7 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-vue": "^9.30.0",
     "execa": "^4.1.0",
+    "highlight.js": "^11.10.0",
     "husky": "^7.0.4",
     "jsdom": "^19.0.0",
     "lint-staged": "^11.2.6",
