fix(form): text组件配置了tooltip无效

--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@popperjs/core": "^2.11.8",
     "lodash-es": "^4.17.21",
     "sortablejs": "^1.15.2"
   },
@@ -61,8 +62,8 @@
   "peerDependencies": {
     "@tmagic/design": "workspace:*",
     "@tmagic/utils": "workspace:*",
-    "vue": "^3.4.35",
-    "typescript": "*"
+    "typescript": "*",
+    "vue": "^3.4.35"
   },
   "peerDependenciesMeta": {
     "typescript": {
