--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -57,6 +57,7 @@
     "@tmagic/utils": "workspace:*",
     "buffer": "^6.0.3",
     "color": "^3.1.3",
+    "deep-object-diff": "^1.1.9",
     "emmet-monaco-es": "^5.3.0",
     "events": "^3.3.0",
     "gesto": "^1.19.1",
