--- a/packages/data-source/package.json
+++ b/packages/data-source/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.5.0-beta.16",
+  "version": "1.5.0",
   "name": "@tmagic/data-source",
   "type": "module",
   "main": "dist/tmagic-data-source.umd.cjs",
