--- a/playground/package.json
+++ b/playground/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tmagic-playground",
-  "version": "1.5.0-beta.16",
+  "version": "1.5.0",
   "type": "module",
   "private": true,
   "scripts": {
@@ -13,9 +13,9 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
-    "@tmagic/core": "1.5.0-beta.16",
-    "@tmagic/editor": "1.5.0-beta.16",
-    "@tmagic/element-plus-adapter": "1.5.0-beta.16",
+    "@tmagic/core": "1.5.0",
+    "@tmagic/editor": "1.5.0",
+    "@tmagic/element-plus-adapter": "1.5.0",
     "@tmagic/tmagic-form-runtime": "1.1.3",
     "element-plus": "^2.8.6",
     "lodash-es": "^4.17.21",
