--- a/runtime/vue3/package.json
+++ b/runtime/vue3/package.json
@@ -26,17 +26,17 @@
     "vue": ">=3.5.0"
   },
   "devDependencies": {
-    "@tmagic/cli": "1.5.0",
+    "@tmagic/cli": "^1.5.0",
     "@types/node": "^18.19.0",
-    "@vitejs/plugin-legacy": "^5.4.2",
-    "@vitejs/plugin-vue": "^5.1.3",
+    "@vitejs/plugin-legacy": "^6.0.0",
+    "@vitejs/plugin-vue": "5.2.1",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/compiler-sfc": "^3.5.12",
     "rollup": "^4.17.2",
     "rollup-plugin-external-globals": "^0.10.0",
-    "sass": "^1.78.0",
+    "sass": "^1.83.0",
     "terser": "^5.31.6",
     "typescript": "^5.5.4",
-    "vite": "^5.4.10"
+    "vite": "^6.0.3"
   }
 }
