--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "pg:vue2": "pnpm playground:vue2",
     "playground:react": "pnpm --filter \"runtime-react\" build:libs && pnpm --filter \"runtime-react\" --filter \"tmagic-playground\" dev:react",
     "pg:react": "pnpm playground:react",
-    "build": "pnpm build:dts && pnpm --filter \"@tmagic/*\" build",
+    "build": "pnpm build:dts && pnpm --filter \"@tmagic/cli\" build && node scripts/build.mjs",
     "build:dts": "pnpm --filter \"@tmagic/cli\" build && tsc -p tsconfig.build-browser.json && vue-tsc --declaration --emitDeclarationOnly --project tsconfig.build-vue.json && rollup -c rollup.dts.config.js && rimraf temp",
     "check:type": "tsc --incremental --noEmit -p tsconfig.check.json && vue-tsc --noEmit -p tsconfig.check-vue.json",
     "build:playground": "pnpm --filter \"runtime-vue3\" build && pnpm --filter \"tmagic-playground\" build",
@@ -51,6 +51,7 @@
     "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitest/coverage-v8": "^2.1.8",
+    "@vue/compiler-sfc": "^3.5.13",
     "c8": "^7.14.0",
     "commitizen": "^4.3.1",
     "conventional-changelog-cli": "^4.1.0",
@@ -80,8 +81,8 @@
     "serialize-javascript": "^6.0.2",
     "shx": "^0.3.4",
     "typescript": "^5.7.3",
-    "vite": "^6.0.9",
-    "vitepress": "^1.5.0",
+    "vite": "^6.0.10",
+    "vitepress": "^1.6.1",
     "vitest": "^3.0.2",
     "vue": "^3.5.13",
     "vue-tsc": "^2.2.0"
