--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -28,9 +28,6 @@
     "src"
   ],
   "license": "Apache-2.0",
-  "scripts": {
-    "build": "vite build"
-  },
   "engines": {
     "node": ">=18"
   },
@@ -70,17 +67,10 @@
   "devDependencies": {
     "@types/events": "^3.0.0",
     "@types/lodash-es": "^4.17.4",
-    "@types/node": "^18.19.0",
     "@types/serialize-javascript": "^5.0.1",
     "@types/sortablejs": "^1.15.8",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "@vue/compiler-sfc": "^3.5.13",
     "@vue/test-utils": "^2.4.6",
-    "rimraf": "^3.0.2",
-    "sass": "^1.83.0",
-    "tsc-alias": "^1.8.5",
-    "type-fest": "^4.10.3",
-    "vite": "^6.0.9"
+    "type-fest": "^4.10.3"
   },
   "peerDependencies": {
     "@tmagic/core": "workspace:*",
