--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -28,9 +28,6 @@
     "src"
   ],
   "license": "Apache-2.0",
-  "scripts": {
-    "build": "vite build"
-  },
   "engines": {
     "node": ">=18"
   },
@@ -48,14 +45,8 @@
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.4",
-    "@types/node": "^18.19.0",
     "@types/sortablejs": "^1.15.8",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "@vue/compiler-sfc": "^3.5.13",
-    "@vue/test-utils": "^2.4.6",
-    "rimraf": "^3.0.2",
-    "sass": "^1.83.0",
-    "vite": "^6.0.9"
+    "@vue/test-utils": "^2.4.6"
   },
   "peerDependencies": {
     "@tmagic/design": "workspace:*",
