--- a/packages/stage/package.json
+++ b/packages/stage/package.json
@@ -19,9 +19,6 @@
     "src"
   ],
   "license": "Apache-2.0",
-  "scripts": {
-    "build": "vite build"
-  },
   "engines": {
     "node": ">=18"
   },
@@ -41,16 +38,10 @@
   },
   "devDependencies": {
     "@types/events": "^3.0.0",
-    "@types/lodash-es": "^4.17.4",
-    "@types/node": "^18.19.0",
-    "rimraf": "^3.0.2",
-    "sass": "^1.83.0",
-    "vite": "^6.0.9"
+    "@types/lodash-es": "^4.17.4"
   },
   "peerDependencies": {
     "@tmagic/core": "workspace:*",
-    "@tmagic/schema": "workspace:*",
-    "@tmagic/utils": "workspace:*",
     "typescript": "*"
   },
   "peerDependenciesMeta": {
