--- a/packages/table/package.json
+++ b/packages/table/package.json
@@ -27,9 +27,6 @@
     "src"
   ],
   "license": "Apache-2.0",
-  "scripts": {
-    "build": "vite build"
-  },
   "engines": {
     "node": ">=18"
   },
@@ -42,13 +39,7 @@
     "lodash-es": "^4.17.21"
   },
   "devDependencies": {
-    "@types/lodash-es": "^4.17.4",
-    "@types/node": "^18.19.0",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "@vue/compiler-sfc": "^3.5.13",
-    "rimraf": "^3.0.2",
-    "sass": "^1.83.0",
-    "vite": "^6.0.9"
+    "@types/lodash-es": "^4.17.4"
   },
   "peerDependencies": {
     "@tmagic/design": "workspace:*",
