--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -18,9 +18,6 @@
     "src"
   ],
   "license": "Apache-2.0",
-  "scripts": {
-    "build": "vite build --mode=es && vite build --mode=umd"
-  },
   "engines": {
     "node": ">=18"
   },
@@ -33,10 +30,7 @@
     "lodash-es": "^4.17.21"
   },
   "devDependencies": {
-    "@types/lodash-es": "^4.17.4",
-    "@types/node": "^18.19.0",
-    "rimraf": "^3.0.2",
-    "vite": "^6.0.9"
+    "@types/lodash-es": "^4.17.4"
   },
   "peerDependencies": {
     "@tmagic/schema": "workspace:*",
