--- a/runtime/vue3/package.json
+++ b/runtime/vue3/package.json
@@ -21,9 +21,9 @@
   "dependencies": {
     "@tmagic/core": "1.5.9",
     "@tmagic/stage": "1.5.9",
-    "@tmagic/vue-runtime-help": "^0.1.4",
+    "@tmagic/vue-runtime-help": "^1.0.0",
     "axios": "^0.25.0",
-    "vue": ">=3.5.0"
+    "vue": "^3.5.0"
   },
   "devDependencies": {
     "@tmagic/cli": "1.5.9",
