--- a/react-components/page-fragment-container/package.json
+++ b/react-components/page-fragment-container/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.2",
+  "version": "0.1.0",
   "name": "@tmagic/react-page-fragment-container",
   "type": "module",
   "main": "src/index.ts",
@@ -14,16 +14,13 @@
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
   "peerDependencies": {
-    "@tmagic/schema": "workspace:^",
+    "@tmagic/core": "workspace:^",
     "@tmagic/react-runtime-help": "workspace:^",
     "react": ">=18.3.1",
     "react-dom": ">=18.3.1",
     "typescript": "*"
   },
   "peerDependenciesMeta": {
-    "@tmagic/schema": {
-      "optional": true
-    },
     "typescript": {
       "optional": true
     }
