--- a/react-components/qrcode/package.json
+++ b/react-components/qrcode/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.2",
+  "version": "0.1.0",
   "name": "@tmagic/react-qrcode",
   "type": "module",
   "main": "src/index.ts",
@@ -17,16 +17,13 @@
     "qrcode": "^1.5.0"
   },
   "peerDependencies": {
-    "@tmagic/schema": "workspace:^",
+    "@tmagic/core": "workspace:^",
     "@tmagic/react-runtime-help": "workspace:^",
     "react": ">=18.3.1",
     "react-dom": ">=18.3.1",
     "typescript": "*"
   },
   "peerDependenciesMeta": {
-    "@tmagic/schema": {
-      "optional": true
-    },
     "typescript": {
       "optional": true
     }
