feat(editor,form,form-schema): 新增form-schema，将表单schema放入其中

--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -51,6 +51,7 @@
   "peerDependencies": {
     "@tmagic/design": "workspace:*",
     "@tmagic/utils": "workspace:*",
+    "@tmagic/form-schema": "workspace:*",
     "vue": ">=3.5.0",
     "typescript": "*"
   },
