--- a/packages/form-schema/package.json
+++ b/packages/form-schema/package.json
@@ -1,15 +1,15 @@
 {
   "version": "1.5.16",
-  "name": "@tmagic/schema",
+  "name": "@tmagic/form-schema",
   "type": "module",
-  "main": "dist/tmagic-schema.umd.cjs",
-  "module": "dist/tmagic-schema.js",
+  "main": "dist/tmagic-form-schema.umd.cjs",
+  "module": "dist/tmagic-form-schema.js",
   "types": "types/index.d.ts",
   "exports": {
     ".": {
       "types": "./types/index.d.ts",
-      "import": "./dist/tmagic-schema.js",
-      "require": "./dist/tmagic-schema.umd.cjs"
+      "import": "./dist/tmagic-form-schema.js",
+      "require": "./dist/tmagic-form-schema.umd.cjs"
     },
     "./*": "./*"
   },
@@ -23,9 +23,12 @@
   },
   "license": "Apache-2.0",
   "repository": {
-    "directory": "packages/schema",
+    "directory": "packages/form-schema",
     "type": "git",
     "url": "https://github.com/Tencent/tmagic-editor.git"
+  },
+  "dependencies": {
+    "@tmagic/schema": "workspace:*"
   },
   "peerDependencies": {
     "typescript": "*"
