--- a/react-components/qrcode/package.json
+++ b/react-components/qrcode/package.json
@@ -14,7 +14,8 @@
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
   "dependencies": {
-    "qrcode": "^1.5.0"
+    "@tmagic/form-schema": "workspace:^",
+     "qrcode": "^1.5.0"
   },
   "peerDependencies": {
     "@tmagic/core": "workspace:^",
