--- a/tsconfig.check.json
+++ b/tsconfig.check.json
@@ -4,6 +4,7 @@
     "packages/core/src",
     "packages/data-source/src",
     "packages/dep/src",
+    "packages/form-schema/src",
     "packages/schema/src",
     "packages/stage/src",
     "packages/utils/src",
