--- a/vue-components/overlay/package.json
+++ b/vue-components/overlay/package.json
@@ -14,6 +14,7 @@
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
   "dependencies": {
+    "@tmagic/form-schema": "workspace:^",
     "vue-demi": "^0.14.10"
   },
   "peerDependencies": {
