chore(ui): 将ui/ui-react从packages移入runtime中，不再跟随packags发布

--- a/runtime/ui/package.json
+++ b/runtime/ui/package.json
@@ -14,7 +14,7 @@
   },
   "license": "Apache-2.0",
   "repository": {
-    "directory": "packages/ui",
+    "directory": "runtime/ui",
     "type": "git",
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
