--- a/runtime/ui-react/package.json
+++ b/runtime/ui-react/package.json
@@ -11,7 +11,7 @@
     "node": ">=18"
   },
   "repository": {
-    "directory": "packages/ui-react",
+    "directory": "runtime/ui-react",
     "type": "git",
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
