chore: update deps

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "tmagic",
   "private": true,
   "type": "module",
-  "packageManager": "pnpm@9.15.4",
+  "packageManager": "pnpm@10.11.1",
   "scripts": {
     "bootstrap": "pnpm i && pnpm build",
     "clean:top": "rimraf */**/dist */**/types */dist coverage dwt* temp packages/cli/lib",
@@ -43,27 +43,27 @@
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.6.1",
-    "@commitlint/config-conventional": "^18.6.3",
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
     "@rollup/plugin-alias": "^5.1.1",
-    "@tmagic/eslint-config": "workspace: ^*",
+    "@tmagic/eslint-config": "workspace:*",
     "@types/node": "18.19.61",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vitest/coverage-v8": "^2.1.9",
     "@vue/compiler-sfc": "^3.5.13",
     "c8": "^7.14.0",
     "commitizen": "^4.3.1",
-    "conventional-changelog-cli": "^4.1.0",
+    "conventional-changelog-cli": "^5.0.0",
     "cosmiconfig": "^8.3.6",
     "cz-conventional-changelog": "^3.3.0",
-    "element-plus": "^2.9.7",
+    "element-plus": "^2.9.11",
     "enquirer": "^2.4.1",
-    "eslint": "^9.25.0",
+    "eslint": "^9.28.0",
     "execa": "^4.1.0",
     "highlight.js": "^11.11.1",
-    "husky": "^7.0.4",
+    "husky": "^9.1.7",
     "jsdom": "^19.0.0",
-    "lint-staged": "^11.2.6",
+    "lint-staged": "^16.1.0",
     "minimist": "^1.2.8",
     "picocolors": "^1.1.1",
     "prettier": "^3.5.3",
@@ -74,11 +74,11 @@
     "semver": "^7.7.1",
     "serialize-javascript": "^6.0.2",
     "shx": "^0.3.4",
-    "typescript": "^5.8.2",
-    "vite": "^6.2.4",
+    "typescript": "catalog:",
+    "vite": "catalog:",
     "vitepress": "^1.6.3",
-    "vitest": "^3.1.1",
-    "vue": "^3.5.13",
+    "vitest": "^3.2.1",
+    "vue": "catalog:",
     "vue-tsc": "^2.2.8"
   },
   "config": {
