--- a/playground/package.json
+++ b/playground/package.json
@@ -17,26 +17,26 @@
     "@tmagic/editor": "1.5.21",
     "@tmagic/element-plus-adapter": "1.5.21",
     "@tmagic/tmagic-form-runtime": "1.1.3",
-    "element-plus": "^2.9.7",
+    "element-plus": "^2.9.11",
     "lodash-es": "^4.17.21",
-    "monaco-editor": "^0.48.0",
-    "serialize-javascript": "^6.0.0",
-    "vue": "^3.5.13",
-    "vue-router": "^4.4.3"
+    "monaco-editor": "^0.52.2",
+    "serialize-javascript": "^6.0.2",
+    "vue": "catalog:",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.4",
     "@types/node": "^18.19.0",
-    "@types/serialize-javascript": "^5.0.1",
+    "@types/serialize-javascript": "^5.0.4",
     "@vitejs/plugin-legacy": "^6.0.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
-    "@vue/compiler-sfc": "^3.5.13",
+    "@vue/compiler-sfc": "catalog:",
     "sass": "^1.83.0",
     "terser": "^5.31.6",
-    "typescript": "^5.8.2",
+    "typescript": "catalog:",
     "unplugin-auto-import": "^0.12.0",
     "unplugin-vue-components": "^0.22.11",
-    "vite": "^6.2.4"
+    "vite": "catalog:"
   }
 }
