--- a/runtime/react/package.json
+++ b/runtime/react/package.json
@@ -33,7 +33,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-legacy": "^6.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
-    "typescript": "^5.8.2",
-    "vite": "^6.2.4"
+    "typescript": "catalog:",
+    "vite": "catalog:"
   }
 }
