--- a/runtime/vue3/package.json
+++ b/runtime/vue3/package.json
@@ -23,7 +23,7 @@
     "@tmagic/stage": "1.5.21",
     "@tmagic/vue-runtime-help": "^1.1.0",
     "axios": "^0.25.0",
-    "vue": "^3.5.0"
+    "vue": "catalog:"
   },
   "devDependencies": {
     "@tmagic/cli": "1.5.21",
@@ -31,12 +31,12 @@
     "@vitejs/plugin-legacy": "^6.0.0",
     "@vitejs/plugin-vue": "5.2.3",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
-    "@vue/compiler-sfc": "^3.5.13",
+    "@vue/compiler-sfc": "catalog:",
     "rollup": "^4.38.0",
     "rollup-plugin-external-globals": "^0.10.0",
     "sass": "^1.83.0",
     "terser": "^5.31.6",
-    "typescript": "^5.8.2",
-    "vite": "^6.2.4"
+    "typescript": "catalog:",
+    "vite": "catalog:"
   }
 }
